// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallMethodRequest schema test invalid values: 0 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'InputArguments'
    Path:     CallMethodRequest.schema.json#/required
  must have required property 'MethodId'
    Path:     CallMethodRequest.schema.json#/required
"
`;

exports[`CallMethodRequest schema test invalid values: 1 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'InputArguments'
    Path:     CallMethodRequest.schema.json#/required
"
`;

exports[`CallMethodRequest schema test invalid values: 2 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'MethodId'
    Path:     CallMethodRequest.schema.json#/required
  /InputArguments must be array
    Received: <empty string>
    Path:     CallMethodRequest.schema.json#/properties/InputArguments/type
"
`;

exports[`CallMethodRequest schema test invalid values: 3 1`] = `
"expect(received).toMatchSchema(schema)

received
  /MethodId must NOT have fewer than 1 characters
    Received: <empty string>
    Path:     CallMethodRequest.schema.json#/properties/MethodId/minLength
"
`;

exports[`CallMethodRequest schema test invalid values: 4 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'InputArguments'
    Path:     CallMethodRequest.schema.json#/required
  must NOT have additional properties, but found 'NamespaceIndex'
    Expected: <boolean> false
    Path:     CallMethodRequest.schema.json#/additionalProperties
  /MethodId must be string
    Received: <number> 1
    Path:     CallMethodRequest.schema.json#/properties/MethodId/type
"
`;
